ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/TeleVerification__c.object-meta.xml
<CustomObject>
    <label>TeleVerification</label>
    <nameField>
        <label>Tele-Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TeleVerifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>