ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Address_line_CR_2__c.field-meta.xml
<CustomField>
    <fullName>Address_line_CR_2__c</fullName>
    <label>Address line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>