ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Address_verified_with_KYC_CR__c.field-meta.xml
<CustomField>
    <fullName>Address_verified_with_KYC_CR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address verified with KYC?</label>
    <type>Checkbox</type>
</CustomField>