ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Amount_paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_paid__c</fullName>
    <label>Amount paid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>