ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/BE_visited_your_house_Verification__c.field-meta.xml
<CustomField>
    <fullName>BE_visited_your_house_Verification__c</fullName>
    <label>BE visited your house Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tractor_TVR_Verification</valueSetName>
    </valueSet>
</CustomField>