ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TeleVerifications</relationshipLabel>
    <relationshipName>TeleVerifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>