ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Cheque_bounce_charges_informed__c.field-meta.xml
<CustomField>
    <fullName>Cheque_bounce_charges_informed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque bounce charges informed?</label>
    <type>Checkbox</type>
</CustomField>