ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/City_Off__c.field-meta.xml
<CustomField>
    <fullName>City_Off__c</fullName>
    <label>City</label>
    <length>15</length>
    <type>Text</type>
</CustomField>