ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Customer_Informed_Provide_KYC_in_3Month__c.field-meta.xml
<CustomField>
    <fullName>Customer_Informed_Provide_KYC_in_3Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Informed Provide KYC in 3Month?</label>
    <type>Checkbox</type>
</CustomField>