ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Customer_Permanent_Address_Verification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Permanent_Address_Verification__c</fullName>
    <label>Customer Permanent Address Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tractor_TVR_Verification</valueSetName>
    </valueSet>
</CustomField>