ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Did_you_get_any_receipt__c.field-meta.xml
<CustomField>
    <fullName>Did_you_get_any_receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did you get any receipt?</label>
    <type>Checkbox</type>
</CustomField>