ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/District_Off__c.field-meta.xml
<CustomField>
    <fullName>District_Off__c</fullName>
    <label>District</label>
    <length>15</length>
    <type>Text</type>
</CustomField>