ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Field_Investigation__c.field-meta.xml
<CustomField>
    <fullName>Field_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Investigation</label>
    <referenceTo>Field_Investigation__c</referenceTo>
    <relationshipLabel>TeleVerifications</relationshipLabel>
    <relationshipName>TeleVerifications</relationshipName>
    <type>Lookup</type>
</CustomField>