ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Finacle_City__c.field-meta.xml
<CustomField>
    <fullName>Finacle_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Address Finacle City</label>
    <referenceTo>Finacle_City__c</referenceTo>
    <relationshipLabel>TeleVerifications</relationshipLabel>
    <relationshipName>TeleVerifications</relationshipName>
    <type>Lookup</type>
</CustomField>