ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Has_the_vehicle_been_delivered__c.field-meta.xml
<CustomField>
    <fullName>Has_the_vehicle_been_delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has the vehicle been delivered?</label>
    <type>Checkbox</type>
</CustomField>