ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Have_original_KYC_verified_atleast_once__c.field-meta.xml
<CustomField>
    <fullName>Have_original_KYC_verified_atleast_once__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have original KYC verified atleast once?</label>
    <type>Checkbox</type>
</CustomField>