ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Have_you_applied_for_a_loan__c.field-meta.xml
<CustomField>
    <fullName>Have_you_applied_for_a_loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you applied for a loan?</label>
    <type>Checkbox</type>
</CustomField>