ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Is_customer_having_an_Aadhar_Card__c.field-meta.xml
<CustomField>
    <fullName>Is_customer_having_an_Aadhar_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is customer having an Aadhar Card?</label>
    <type>Checkbox</type>
</CustomField>