ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Is_customer_s_Mob_No_linked_to_Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Is_customer_s_Mob_No_linked_to_Aadhar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is customer&apos;s Mob.No linked to Aadhar?</label>
    <type>Checkbox</type>
</CustomField>