ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Is_customer_using_Aadhar_Linked_Mob_No__c.field-meta.xml
<CustomField>
    <fullName>Is_customer_using_Aadhar_Linked_Mob_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is customer using Aadhar Linked Mob.No?</label>
    <type>Checkbox</type>
</CustomField>