ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Land_Mark__c.field-meta.xml
<CustomField>
    <fullName>Land_Mark__c</fullName>
    <label>Land Mark</label>
    <length>100</length>
    <type>Text</type>
</CustomField>