ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <label>Loan Amount</label>
    <length>15</length>
    <type>Text</type>
</CustomField>