ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Margin_Money_Paid__c.field-meta.xml
<CustomField>
    <fullName>Margin_Money_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Margin Money Paid?</label>
    <type>Checkbox</type>
</CustomField>