ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Margin_Money_Paid_by_Verification__c.field-meta.xml
<CustomField>
    <fullName>Margin_Money_Paid_by_Verification__c</fullName>
    <label>Margin Money Paid by Verification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>