ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Maximum_Loan_amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Loan_amount__c</fullName>
    <label>Maximum Loan amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>