ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Money_asked_for_processing_Down_Payment__c.field-meta.xml
<CustomField>
    <fullName>Money_asked_for_processing_Down_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Money asked for processing/Down Payment?</label>
    <type>Checkbox</type>
</CustomField>