ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/No_of_years_in_business_current_emplo__c.field-meta.xml
<CustomField>
    <fullName>No_of_years_in_business_current_emplo__c</fullName>
    <label>Number of years in employment/business</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>