ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Nominee_City__c.field-meta.xml
<CustomField>
    <fullName>Nominee_City__c</fullName>
    <label>Nominee City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>