ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Nominee_Pin_Code__c.field-meta.xml
<CustomField>
    <fullName>Nominee_Pin_Code__c</fullName>
    <label>Nominee Pin Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>