ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Office_Address_Finacle_City__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Finacle_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office Address Finacle City</label>
    <referenceTo>Finacle_City__c</referenceTo>
    <relationshipLabel>TeleVerifications (Office Address Finacle City)</relationshipLabel>
    <relationshipName>TeleVerifications2</relationshipName>
    <type>Lookup</type>
</CustomField>