ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Permanent_Address_Finacle_City__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_Finacle_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permanent Address Finacle City</label>
    <referenceTo>Finacle_City__c</referenceTo>
    <relationshipLabel>TeleVerifications (Permanent Address Finacle City)</relationshipLabel>
    <relationshipName>TeleVerifications1</relationshipName>
    <type>Lookup</type>
</CustomField>