ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Provide_Update_KYC_in_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Provide_Update_KYC_in_3_Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provide/Update KYC in 3 Months</label>
    <type>Checkbox</type>
</CustomField>