ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Purpose_of_purchasing_the_vehicle__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_purchasing_the_vehicle__c</fullName>
    <label>Purpose of purchasing the vehicle?</label>
    <type>TextArea</type>
</CustomField>