ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Relationship_with_borrower__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_borrower__c</fullName>
    <label>Relationship with borrower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPLICANT</fullName>
            </value>
            <value>
                <fullName>ASSOCIATION</fullName>
            </value>
            <value>
                <fullName>ASSOCIATION FOR PROFIT</fullName>
            </value>
            <value>
                <fullName>AUNTY</fullName>
            </value>
            <value>
                <fullName>BROTHER</fullName>
            </value>
            <value>
                <fullName>BROTHER - INCLUDING STEP BROTHER</fullName>
            </value>
            <value>
                <fullName>BROTHER - IN LAW</fullName>
            </value>
            <value>
                <fullName>COUSIN BROTHER</fullName>
            </value>
            <value>
                <fullName>COUSIN SISTER</fullName>
            </value>
            <value>
                <fullName>DAUGHTER - INCLUDING STEP DAUGHTER</fullName>
            </value>
            <value>
                <fullName>DIRECTOR</fullName>
            </value>
            <value>
                <fullName>FATHER</fullName>
            </value>
            <value>
                <fullName>FATHER - IN LAW</fullName>
            </value>
            <value>
                <fullName>GRANDDAUGHTER</fullName>
            </value>
            <value>
                <fullName>GRANDSON</fullName>
            </value>
            <value>
                <fullName>HUSBAND</fullName>
            </value>
            <value>
                <fullName>HUSBAND OF GRANDDAUGHTER</fullName>
            </value>
            <value>
                <fullName>HUSBAND OF SISTER</fullName>
            </value>
            <value>
                <fullName>HUSBAND OF SISTER - IN LAW</fullName>
            </value>
            <value>
                <fullName>MANAGING DIRECTOR</fullName>
            </value>
            <value>
                <fullName>MANAGING PARTNER</fullName>
            </value>
            <value>
                <fullName>MATERNAL GRANDFATHER</fullName>
            </value>
            <value>
                <fullName>MATERNAL GRANDMOTHER</fullName>
            </value>
            <value>
                <fullName>MEMBER OF HINDU UNDIVIDED FAMILY</fullName>
            </value>
            <value>
                <fullName>MOTHER</fullName>
            </value>
            <value>
                <fullName>MOTHER -INCLUDING STEP MOTHER</fullName>
            </value>
            <value>
                <fullName>MOTHER - IN LAW</fullName>
            </value>
            <value>
                <fullName>NEPHEW</fullName>
            </value>
            <value>
                <fullName>NIECE</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>