ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <description>(Not for Remark section in TVR object)</description>
    <label>Remark</label>
    <type>TextArea</type>
</CustomField>