ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Remarks_in_RemarkSection__c.field-meta.xml
<CustomField>
    <fullName>Remarks_in_RemarkSection__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>