ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/SA_account_opened_for__c.field-meta.xml
<CustomField>
    <fullName>SA_account_opened_for__c</fullName>
    <label>SA account opened for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Co-borrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>