ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/State_CR__c.field-meta.xml
<CustomField>
    <fullName>State_CR__c</fullName>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>