ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/State_Off__c.field-meta.xml
<CustomField>
    <fullName>State_Off__c</fullName>
    <label>State</label>
    <length>15</length>
    <type>Text</type>
</CustomField>