ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <formula>Loan_Application__r.Loan_Application_Number__c + &apos;_&apos;+ RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>