ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/To_Whom_Margin_Money_Paid__c.field-meta.xml
<CustomField>
    <fullName>To_Whom_Margin_Money_Paid__c</fullName>
    <label>To Whom Margin Money Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>