ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/TVR_assessment__c.field-meta.xml
<CustomField>
    <fullName>TVR_assessment__c</fullName>
    <label>TVR assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>