ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/TVR_Observation__c.field-meta.xml
<CustomField>
    <fullName>TVR_Observation__c</fullName>
    <label>TVR Observation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>