ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/TVR_Status__c.field-meta.xml
<CustomField>
    <fullName>TVR_Status__c</fullName>
    <label>TVR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
                <isActive>false</isActive>
                <label>High Risk</label>
            </value>
            <value>
                <fullName>Pass</fullName>
                <isActive>false</isActive>
                <label>Pass</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>