ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Vehicle_type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_type__c</fullName>
    <label>Vehicle type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>