ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Vehicle_Variant__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Variant__c</fullName>
    <label>Vehicle Variant</label>
    <length>30</length>
    <type>Text</type>
</CustomField>