ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/fields/Who_will_be_the_end_user_of_the_product__c.field-meta.xml
<CustomField>
    <fullName>Who_will_be_the_end_user_of_the_product__c</fullName>
    <label>Who will be the end user of the product?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>