ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/recordTypes/Post_Sanction.recordType-meta.xml
<RecordType>
    <fullName>Post_Sanction</fullName>
    <active>true</active>
    <label>Post-Sanction</label>
</RecordType>