ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/recordTypes/Pre_Sanction.recordType-meta.xml
<RecordType>
    <fullName>Pre_Sanction</fullName>
    <active>true</active>
    <label>Pre-Sanction</label>
</RecordType>