ProdIND/ProdPrograms/force-app/main/default/objects/TeleVerification__c/validationRules/if_High_Risk_selected_for_TVR_Assesment.validationRule-meta.xml
<ValidationRule>
    <fullName>if_High_Risk_selected_for_TVR_Assesment</fullName>
    <active>true</active>
    <description>Remarks (Text Area) - Required if High Risk selected for TVR Assessment.</description>
    <errorConditionFormula>IF(
    AND(
        TEXT(TVR_assessment__c) = &quot;High Risk&quot;, 
        ISBLANK(Remarks_in_RemarkSection__c)), True, False
 )</errorConditionFormula>
    <errorMessage>Required if High Risk selected for TVR Assessment.</errorMessage>
</ValidationRule>